fix: harden env check and leaflet

--- a/client/index.html
+++ b/client/index.html
@@ -48,6 +48,7 @@
     <meta name="theme-color" content="#ff6a00" />
     <meta name="application-name" content="SkateHubba" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="SkateHubba" />
     <meta name="format-detection" content="telephone=no" />
@@ -89,7 +90,6 @@
     <!-- Fonts loaded via CSS @font-face with CDN fallback -->
 
     <!-- Resource hints for performance -->
-    <link rel="preload" href="/attached_assets/hubbagraffwall.png" as="image" fetchpriority="high">
   </head>
   <body>
     <div id="root">
